--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: 3.x  # Choose the Python version you want to use
 
       - name: Install dependencies
-        run: pip install -r requirements.txt  # Adjust this as needed
+        run: pip install -r requirements/core.txt  # Adjust this as needed
 
       - name: Run unit tests
         run: python -m unittest discover
