--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -46,6 +46,7 @@ jobs:
           echo "Sanitized next development version: ${SANITIZED_NEXT_DEV_VERSION}"
 
       - name: Set dry run
+        run: |
           DRY_RUN=${{ github.event.inputs.dry_run }}
 
       - name: Bump version for release
