--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -46,7 +46,7 @@ jobs:
           echo "Sanitized next development version: ${SANITIZED_NEXT_DEV_VERSION}"
 
       - name: Set dry run
-        run: DRY_RUN=${{ github.event.inputs.dry_run }}
+        run: DRY_RUN="true"
 
       - name: Bump version for release
         run: |
