--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -61,8 +61,9 @@ jobs:
 
           # Commit changes
           git add setup.py
+          git commit -m "Bump version for release to ${RELEASE_VERSION}"
           if [[ "${{ github.event.inputs.dry_run }}" != "true" ]]; then
-            git commit -m "Bump version for release to ${RELEASE_VERSION}"
+            git push origin
           fi
 
       - name: Create pull request
@@ -91,6 +92,7 @@ jobs:
 
           # Commit changes
           git add setup.py
+          git commit -m "Bump version for next development to ${NEXT_DEV_VERSION}"
           if [[ "${{ github.event.inputs.dry_run }}" != "true" ]]; then
-            git commit -m "Bump version for next development to ${NEXT_DEV_VERSION}"
+            git push origin
           fi
