--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI
 on:
   push:
     branches:
-      - main  # Change this to your main branch name
+      - main
       - dev
 
 jobs:
@@ -17,10 +17,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x  # Choose the Python version you want to use
+          python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install -r requirements/core.txt  # Adjust this as needed
+        run: pip install -r requirements/core.txt
 
       - name: Run unit tests
         run: python -m unittest discover
@@ -49,10 +49,10 @@ jobs:
           fi
 
       - name: Upload to PyPI
-#        if: success()
+        if: |
+          contains(github.event.before, 'json2spark_mapper/') ||
+          contains(github.event.before, 'setup.py/')
         run: |
           pip install twine
           echo "Uploading module"
           twine upload $TWINE_UPLOAD_CMD
-#          twine upload dist/*
-#          twine upload --repository-url https://test.pypi.org/legacy/ dist/*
