--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -55,6 +55,15 @@ jobs:
             echo "Unknown branch: ${{ github.ref }}"
           fi
 
+      - name: Debug Info
+        run: |
+          echo "force_upload: ${{ github.event.inputs.force_upload }}"
+          echo "Changed files:"
+          git diff --name-only ${{ github.event.before }} ${{ github.sha }}
+
+      - name: Print Event Payload
+        run: echo "$GITHUB_EVENT_PATH"
+
       - name: Upload to PyPI
         if: |
           github.event.inputs.force_upload == 'true' ||
