--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -56,7 +56,10 @@ jobs:
           fi
 
       - uses: yumemi-inc/changed-files@v2
-        name: Changed files
+        name: Generate changed py files overview
+        with:
+          patterns: |
+            **/*.py
         id: changed
       - run: |
           for file in ${{ steps.changed.outputs.files }}; do
@@ -66,8 +69,8 @@ jobs:
       - name: Upload to PyPI
         if: |
           github.event.inputs.force_upload == 'true' ||
-          echo "${{ steps.changed.outputs.files }}" | grep -q 'json2spark_mapper/' ||
-          echo "${{ steps.changed.outputs.files }}" | grep -q 'setup.py'
+          cat "${{ steps.changed.outputs.files }}" | grep -q 'json2spark_mapper/' ||
+          cat "${{ steps.changed.outputs.files }}" | grep -q 'setup.py'
         run: |
           pip install twine
           echo "Uploading module"
