--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -61,6 +61,11 @@ jobs:
 
       - run: |
           echo "files changed ${{ steps.changed.outputs.files }}"
+          echo "running checks"
+          echo "${{ steps.changed.outputs.files }}" | grep -q 'json2spark_mapper/'
+          echo $?
+          echo "${{ steps.changed.outputs.files }}" | grep -q 'setup.py'
+          echo $?
 
       - name: Upload to PyPI
         if: |
