--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -62,9 +62,9 @@ jobs:
       - run: |
           echo "files changed ${{ steps.changed.outputs.files }}"
           echo "running checks"
-          echo "${{ steps.changed.outputs.files }}" | grep -q 'json2spark_mapper/'
+          echo "${{ steps.changed.outputs.files }}" | grep 'json2spark_mapper/'
           echo $?
-          echo "${{ steps.changed.outputs.files }}" | grep -q 'setup.py'
+          echo "${{ steps.changed.outputs.files }}" | grep 'setup.py'
           echo $?
 
       - name: Upload to PyPI
