--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -27,7 +27,11 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install -r requirements/core.txt
+        run: |
+          echo "Installing core dependencies"
+          pip install -r requirements/core.txt
+          echo "Installing dependencies used in unittests and development"
+          pip install -r requirements/test.txt
 
       - name: Run unit tests
         run: python -m unittest discover
